2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Don't try to create
	completion list when the array of source elements is null. Fixes
	exception in XML editor.

2008-10-21  Ryan Bair  <ryandbair@gmail.com>

	* MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs:
	  Capture full name of opening tag. Don't read back past an end bracket.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Move updating of
	state engine so that subclasses don't have to do it.

2008-10-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Implement
	attribute value completion and attribute completion.

2008-10-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Move more code
	here from the ASP.NET completion extension.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionDataProvider.cs:
	* MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs:
	Track APIs.

2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlCompletionDataCollection.cs: Track
	CompletionData API.

2008-10-08  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic: Add event and property for accessing errors.

2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	* MonoDevelop.XmlEditor.Completion/XmlTagCompletionData.cs: Track API.
